# libDWG

./: .clang-format  .editorconfig  .gitignore  .gitmodules  .mailmap  AUTHORS  CMakeLists.txt  ChangeLog  LICENSE  LICENSE.ACadSharp  Qt-GPL_LICENSE  README.ACadSharp.md  README.md  a.h  autogen.sh  meson.build  meson_options.txt  package-lock.json  package.json
docs/: CMakeLists.txt  Doxyfile.in  main.md
examples/: CMakeLists.txt  dwgreader.cpp  dwgwriter.cpp
include/: CMakeLists.txt  meson.build
include/delegate/: delegateT.h
include/dwg/: ACadVersion.h  CadDocument.h  CadHeader.h  CadObject.h  CadObjectCollection.h  CadSummaryInfo.h  CadSystemVariables_p.h  CadUtils.h  CadUtils_p.h  Color.h  Coordinate.h  DateTime.h  DwgPreview.h  DwgReferenceType.h  DwgVariant.h  DxfClass.h  DxfClassMap.h  DxfClassMap_p.h  DxfCode.h  DxfFileToken.h  DxfFileToken_p.h  DxfMap_p.h  DxfProperty_p.h  DxfReferenceType.h  DxfSubclassMarker.h  DxfSubclassMarker_p.h  ExtendedDataCollection.h  FlowDirectionType.h  GroupCodeValue.h  GroupCodeValueType.h  IHandledCadObject.h  INamedCadObject.h  IObservableCadCollection.h  ISeqendCollection.h  LineSpacingStyle.h  LineWeightType.h  MathUtils.h  MultiLeaderPathType.h  ObjectType.h  OrthographicType.h  (+24 more)
include/dwg/attributes/: CadSystemVariableAttribute_p.h  DxfCodeValueAttribute_p.h  DxfCollectionCodeValueAttribute_p.h  DxfNameAttribute_p.h  DxfSubClassAttribute_p.h
include/dwg/blocks/: Block.h  BlockEnd.h  BlockTypeFlags.h
include/dwg/classes/: DxfClass.h  DxfClassCollection.h  ProxyFlags.h
include/dwg/common/: ACadVersion.h  DwgReferenceType.h  DxfCode.h  DxfFileToken.h  DxfReferenceType.h  DxfSubclassMarker.h  FlowDirectionType.h  GroupCodeValueType.h  LineSpacingStyle.h  LineWeightType.h  MultiLeaderPathType.h  ObjectType.h  OrthographicType.h  RenderMode.h  TextAlignmentType.h  TextAngleType.h  TextAttachmentDirectionType.h  TextAttachmentPointType.h  TextAttachmentType.h
include/dwg/entities/: Arc.h  AttachmentPointType.h  AttributeBase.h  AttributeDefinition.h  AttributeEntity.h  AttributeFlags.h  BackgroundFillFlags.h  Block.h  BlockContentConnectionType.h  BlockEnd.h  BoundaryPathFlags.h  CadImageBase.h  CadWipeoutBase.h  Circle.h  ClipMode.h  ClipType.h  ColumnType.h  Dimension.h  DimensionAligned.h  DimensionAngular2Line.h  DimensionAngular3Pt.h  DimensionDiameter.h  DimensionLinear.h  DimensionOrdinate.h  DimensionRadius.h  DimensionType.h  DrawingDirectionType.h  Ellipse.h  Entity.h  Face3D.h  GradientColor.h  Hatch.h  HatchBoundaryPath.h  HatchGradientPattern.h  HatchPattern.h  HatchPatternType.h  HatchStyleType.h  HookLineDirection.h  IEntity.h  IPolyline.h  (+55 more)
include/dwg/enums/: ACadVersion.h  DwgReferenceType.h  DxfReferenceType.h  LineWeightType.h  ObjectType.h  OrthographicType.h  RenderMode.h  TextAttachmentDirectionType.h
include/dwg/header/: AttributeVisibilityMode.h  CadHeader.h  DimensionAssociation.h  EntityPlotStyleType.h  IndexCreationFlags.h  MeasurementUnits.h  ObjectSnapMode.h  ObjectSortingFlags.h  ShadeEdgeType.h  (+3 more)
reference/: Dimensions.md
src/: CMakeLists.txt  CadDocument.cpp  CadObject.cpp  CadObjectCollection.cpp  CadSummaryInfo.cpp  CadSystemVariables.cpp  CadUtils.cpp  Color.cpp  Coordinate.cpp  DateTime.cpp  DwgPreview.cpp  DwgStream.cpp  DwgStream.h  DwgVariant.cpp  DxfClassMap.cpp  DxfMap.cpp  DxfProperty.cpp  ExtendedDataCollection.cpp  GroupCodeValue.cpp  Transparency.cpp
src/attributes/: CadSystemVariableAttribute.cpp  DxfCodeValueAttribute.cpp  DxfCollectionCodeValueAttribute.cpp  DxfNameAttribute.cpp  DxfSubClassAttribute.cpp
src/blocks/: Block.cpp  BlockEnd.cpp
src/classes/: DxfClass.cpp  DxfClassCollection.cpp
src/entities/: Arc.cpp  AttributeBase.cpp  AttributeDefinition.cpp  AttributeEntity.cpp  CadWipeoutBase.cpp  Circle.cpp  Dimension.cpp  DimensionAligned.cpp  DimensionAngular2Line.cpp  DimensionAngular3Pt.cpp  DimensionDiameter.cpp  DimensionLinear.cpp  DimensionOrdinate.cpp  DimensionRadius.cpp  Ellipse.cpp  Entity.cpp  Face3D.cpp  Hatch.cpp  HatchBoundaryPath.cpp  HatchGradientPattern.cpp  HatchPattern.cpp  Insert.cpp  Leader.cpp  Line.cpp  LwPolyline.cpp  MLine.cpp  MText.cpp  Mesh.cpp  MultiLeader.cpp  PdfUnderlay.cpp  Point.cpp  PolyLine.cpp  PolyfaceMesh.cpp  RasterImage.cpp  Ray.cpp  Seqend.cpp  Shape.cpp  Solid.cpp  Solid3D.cpp  Spline.cpp  (+10 more)
src/header/: CadHeader.cpp  CadHeader_p.h
src/io/: CadDocumentBuilder.cpp  CadDocumentBuilder.h  CadReaderBase.cpp  CadReaderConfiguration.cpp  CadWriterBase.cpp  CadWriterConfiguration.cpp
src/objects/: AcadPlaceHolder.cpp  AcdbPlaceHolder.cpp  BlockParameter.cpp  BookColor.cpp  CadDictionary.cpp  CadDictionaryWithDefault.cpp  DictionaryVariable.cpp  GeoData.cpp  Group.cpp  ImageDefinition.cpp  ImageDefinitionReactor.cpp  Layout.cpp  MLineStyle.cpp  Material.cpp  MultiLeaderAnnotContext.cpp  MultiLeaderStyle.cpp  NonGraphicalObject.cpp  PaperMargin.cpp  PdfUnderlayDefinition.cpp  PlotSettings.cpp  Scale.cpp  SortEntitiesTable.cpp  TableContent.cpp  TableStyle.cpp  UnderlayDefinition.cpp  UnknownNonGraphicalObject.cpp  VisualStyle.cpp  XRecord.cpp
src/tables/: AppId.cpp  BlockRecord.cpp  DimensionStyle.cpp  Layer.cpp  LineType.cpp  TableEntry.cpp  TextStyle.cpp  UCS.cpp  VPort.cpp  View.cpp
src/units/: UnitStyleFormat.cpp
src/utility/: atomic.cpp  byteendian.cpp  datetime.cpp  mathhelp.cpp  memorymanager.cpp  object.cpp  stringhelp.cpp
src/utils/: Color.cpp  DateTime.cpp  DwgStream.cpp  DwgVariant.cpp  DwgVariantHolder.cpp  Encoding.cpp  EndianConverter.cpp  MathHelper.cpp  StreamWrapper.cpp  StringHelp.cpp  TextCodec.cpp  cptable932.h  cptable936.h  cptable949.h  cptable950.h  cptables.h
src/xdata/: ExtendedData.cpp  ExtendedDataDictionary.cpp  ExtendedDataRecord.cpp
tests/: CMakeLists.txt  ColorTest.cpp
tests/utils/: DateTimeTest.cpp  EndianConverterTest.cpp  StringTest.cpp  TimespanTest.cpp
(+636 files in other folders)
